--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "method-override": "^2.3.0",
     "mongoose": "^4.1.2",
     "morgan": "^1.6.1",
+    "node-schedule": "^1.2.3",
     "request": "^2.81.0",
     "serve-favicon": "^2.3.0"
   },
